objects/smagicinteract__Scheduled_SMS__c.object
<CustomObject>
    <fields>
        <fullName>smagicinteract__MobilePhone__c</fullName>
        <label>MobilePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>smagicinteract__ObjectId__c</fullName>
        <label>ObjectId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Object_Type__c</fullName>
        <label>Object Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>smagicinteract__jobId__c</fullName>
        <label>jobId</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__smsText__c</fullName>
        <label>smsText</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__status__c</fullName>
        <defaultValue>&quot;active&quot;</defaultValue>
        <label>status</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Scheduled SMS</label>
    <nameField>
        <displayFormat>SS-{0000000}</displayFormat>
        <label>Scheduled SMS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled SMSs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>